OO-5987: Basic implementation of grade module